static/docs/user/1.1/_sources/cli/apptainer_key_import.rst.txt
.. _apptainer_key_import:

apptainer key import
--------------------

Import a local key into the local or global keyring

Synopsis
~~~~~~~~



  The 'key import' command allows you to add a key to your local or global keyring
  from a specific file.

::

  apptainer key import [import options...] <input-key>

Examples
~~~~~~~~

::


    $ apptainer key import ./my-key.asc

    # Import into global keyring (root user only)
    $ apptainer key import --global ./my-key.asc

Options
~~~~~~~

::

  -g, --global           manage global public keys (import/pull/remove are restricted to root user or unprivileged installation only)
  -h, --help             help for import
  -d, --keysdir string   set local keyring dir path, an alternative way is to set environment variable 'APPTAINER_KEYSDIR' (default "/home/runner/.apptainer/keys")
      --new-password     set a new password to the private key

SEE ALSO
~~~~~~~~

* :ref:`apptainer key <apptainer_key>` 	 - Manage OpenPGP keys

*Auto generated by spf13/cobra on 28-Jan-2023*
